# siege-example-client

./: Cargo.toml  README.md  run.sh  run.sh.example  siege.toml
assets/buffers/: sample_terrain.raw.zst
assets/meshes/cubemap/: cubemap.mesh
assets/meshes/graybox/: cube_graybox.mesh
assets/shaders/: build.sh  frag_includes.glsl  graybox.frag  graybox.frag.spv  graybox.vert  graybox.vert.spv  horizon.frag  horizon.frag.spv  horizon.vert  horizon.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  text.frag  text.frag.spv  text.vert  text.vert.spv  ui_image.frag  ui_image.frag.spv  ui_image.vert  ui_image.vert.spv  window.frag  window.frag.spv  window.vert  window.vert.spv
assets/textures/: Gudea-Regular.dds.zst  crate_albedo_BC7.dds.zst  crate_normal_BC7.dds.zst  lawn_ao_BC4.dds.zst  lawn_cavity_BC4.dds.zst  lawn_roughness_BC4.dds.zst  ui_atlas_BC3.dds.zst  ui_atlas_BC7.dds.zst
src/: camera.rs  chat.rs  config.rs  errors.rs  input.rs  logger.rs  macros.rs  main.rs  state.rs  stats.rs  terrain.rs
src/graphics/: camera.rs  graybox.rs  horizon.rs  mod.rs  stats.rs  terrain.rs  text.rs  ui_image.rs  window.rs
src/network/: mod.rs  packet_sender.rs
src/ui/: image.rs  mod.rs  text.rs
src/ui/geom/: absrect.rs  coord.rs  dim.rs  mod.rs  point.rs  rect.rs
src/ui/window/: decorate.rs  mod.rs
